--- a/project/src/main/webapp/index.html
+++ b/project/src/main/webapp/index.html
@@ -11,10 +11,11 @@
         </td>
         <td>
           <h1>Hello DevOps Engineers and Architects!</h1>
+          <h2>Welcome testing</h2>
         </td>
       </tr>
     </table>
-
+ 
     <p>This session is to demonstrate how to setup simple pipeline </p>
     <p> This is testing of Git-Github push </p>
 </body>
